# CCM_TJ-AL-AV2

./: .gitignore  DEV_SETUP.md  README.md  db.sqlite3  estrutura.txt  package.json  pyproject.toml  requirements.txt  tailwind.config.js
ccmtj/: admin.py  apps.py  models.py  urls.py  views.py  views_exposicoes.py
ccmtj/migrations/: 0001_initial.py  0002_rename_produto_selfiehistorica.py  0003_alter_selfiehistorica_imagem.py  0004_selfiehistorica_personagemselfie.py  0005_audiodescricao.py  0006_exposicao.py  0007_exposicao_media_type_alter_exposicao_imagem_and_more.py  0008_alter_exposicao_media_type.py  0009_alter_exposicao_media_type.py
ccmtj/static/ccmtj/css/: styles.css
ccmtj/static/ccmtj/js/: audio-player.js  play-video.js  qr-scan.js  selfie.js  slider-fotos.js  slider-videos.js
ccmtj/templates/ccmtj/: agenda.html  base.html  exposicoes.html  ficha-tecnica.html  home.html  info-app.html  leve-para-casa.html  qr-scan.html  selfie.html
ccmtj/templates/ccmtj/acessibilidade/: audio_descricao.html  braile.html  index.html  video_com_legendas.html  video_com_libras.html
ccmtj/templates/ccmtj/agenda/: agenda.html
ccmtj/templates/ccmtj/ccmtj/: ccmtjal.html
ccmtj/templates/ccmtj/home/: home.html
ccmtj/views/: __init__.py  acessibilidade_views.py  agenda_views.py  ccmtjal_views.py  home_views.py  info_views.py  leve_para_casa_views.py  qr_scan_views.py  selfie_view.py  selfie_views.py
project/: settings.py  urls.py
templates/ccmtj/selfie/: selfie_detail.html
templates/ccmtj/selfies/: selfie_confirm_delete.html  selfie_form.html  selfie_list.html
(+5 files in other folders)
