[project]
name = "ccm-tj-al"
version = "0.1.0"
description = "Um Projeto espelho de um web App publicado como tema de minha avaliação"
authors = [
    {name = "Gabriel Leão"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
anyio = "4.9.0"
asgiref = "3.8.1"
build = "1.2.2.post1"
cachecontrol = "0.14.2"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
django = "5.1.7"
django-debug-toolbar = "5.1.0"
dulwich = "0.22.8"
fastjsonschema = "2.21.1"
filelock = "3.18.0"
findpython = "0.6.3"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
keyring = "25.6.0"
more-itertools = "10.6.0"
msgpack = "1.1.0"
packaging = "24.2"
pbs-installer = "2025.3.17"
pillow = "11.1.0"
pkginfo = "1.12.1.2"
platformdirs = "4.3.7"
poetry = "2.1.1"
poetry-core = "2.1.1"
pyproject-hooks = "1.2.0"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.12.2"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlparse = "0.5.3"
tomlkit = "0.13.2"
trove-classifiers = "2025.3.19.19"
tzdata = "2025.2"
urllib3 = "2.3.0"
virtualenv = "20.29.3"
zstandard = "0.23.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
